apply plugin: 'docker-compose'
apply plugin: "com.kenshoo.tasksplugin"
apply plugin: "com.kenshoo.vaultkaplugin"

buildscript {
    ext {
        springBootVersion = '2.7.4'
        springCloudVersion = '2021.0.4'
        dependencyManagementPluginVersion = '1.0.14.RELEASE'
        dockerComposePluginVersion = '0.16.+'
        gradleTasksPluginVersion = '0.1.+'
        vaultkaPluginVersion = '0.1.+'
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagementPluginVersion}")
        classpath "gradle.plugin.com.avast.gradle:gradle-docker-compose-plugin:${dockerComposePluginVersion}"
        classpath "com.kenshoo.tasksplugin:gradle-tasks-plugin:${gradleTasksPluginVersion}"
        classpath "com.kenshoo.vaultkaplugin:vaultka-gradle-plugin:${vaultkaPluginVersion}"
    }
    configurations.classpath {
        resolutionStrategy.activateDependencyLocking()
    }
}

apply from: "${rootDir}/dependencies.gradle"
apply from: "${rootDir}/jacoco.settings.gradle"

dockerCompose {
    captureContainersOutputToFiles =  project.file('build/logs/containers/')
    captureContainersOutput = true
    composeLogToFile =  project.file('build/logs/containers/compose.log')
    onlyResources {
        scale = ['app': 0]
    }
}

task dockerBuild(type: Exec){
    commandLine "docker", "build", "-t", "app", "."
}

dockerBuild.mustRunAfter("application:assemble")

composeDown.finalizedBy(onlyResourcesComposeDown)
composeDown.dependsOn(populateEnvVarsWithSecrets)
composeUp.dependsOn(populateEnvVarsWithSecrets)
composeUp.mustRunAfter(dockerBuild)
onlyResourcesComposeUp.dependsOn(populateEnvVarsWithSecrets)

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'
    apply plugin: 'io.spring.dependency-management'

    def BUILD_NUMBER = project.hasProperty('buildNum') ? "$buildNum" : (System.env.BUILD_NUMBER != null) ? "${System.env.BUILD_NUMBER}" : 'undef'
    group = 'io.skai.template'
    version = '0.1.' + BUILD_NUMBER

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        compileClasspath {
            resolutionStrategy.activateDependencyLocking()
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }
}

task updateLocks(type: GradleBuild) {
    startParameter.setWriteDependencyLocks(true)
    tasks = ['assemble']
}

task publish(type: Wrapper) {

}

task testAll(type: GradleBuild) {
    tasks = ['composeDown', 'clean', 'assemble', 'dockerBuild', 'composeUp', 'check']
}

task copyAppLog(type: Wrapper) {

}

task cleanDocker(type: Exec) {
    commandLine ("docker", "rm", "-f", "app", "app_db", "redis_db", "app_rabbit", "app_mock").setIgnoreExitValue(true)
}